name:                pure-server
version:             0.8.0.0
homepage:            purehs.org/doc/pure-server
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-server.git

library
  exposed-modules:
      Pure.Server

  build-depends:
    base,
    containers,
    pure-core,
    pure-default,
    pure-websocket

  hs-source-dirs:      src
  default-language:    Haskell2010
